Fixed issue with img on mobiles by replacing with icon

--- a/public/style.css
+++ b/public/style.css
@@ -3,8 +3,8 @@
 #map {
     position: relative;
     height: -moz-calc(100% - 89px);
-    height: -webkit-calc(100% - 89px);
-    height: calc(100% - 89px);
+    height: -webkit-calc(100% - 77px);
+    height: calc(100% - 77px);
 }
 
 html,
@@ -16,7 +16,9 @@ body {
 }
 
 img {
-    padding: 0 10px;
+    padding: 0 20px;
+    width: 5%;
+    height: 5%;
 }
 
 .gm-style .gm-style-iw {
